--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -72,5 +72,17 @@
             android:background="#1565C0"
             android:textColor="@android:color/white"/>
 
+        <!-- Already have account line -->
+        <TextView
+            android:id="@+id/alreadyLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Already have an account? Log in"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            android:layout_marginTop="16dp"
+            android:clickable="true"
+            android:focusable="true"/>
+
     </LinearLayout>
 </ScrollView>
